<?xml version="1.0"?>
<package format="3">
  <name>mouse_odometry</name>
  <version>0.0.0</version>

  <description>
    Odometry estimation using two optical mice
  </description>

  <maintainer email="user@example.com">
    user
  </maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>